--- a/VRChat/82/956182.html
+++ b/VRChat/82/956182.html
@@ -75,10 +75,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "maplefoxkebab" data-product-category="127"
-        data-product-id="956182" data-product-list="market_show"
-        data-product-price="200" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="maplefoxkebab" data-product-category=
+        "127" data-product-id="956182" data-product-list=
+        "market_show" data-product-price="200" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -101,17 +102,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -122,13 +123,13 @@
                             <img alt="椛狐のケバブ屋さん" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/2238290/icon_image/a884c73a-da77-401a-acf6-d8356f8a9f05_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               椛狐のケバブ屋さん
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           無骨な大刀
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -217,17 +218,15 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/956182"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="無骨な大刀 | 椛狐のケバブ屋さん"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/956182"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="無骨な大刀 | 椛狐のケバブ屋さん" data-count=
+                          "none" class="twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/956182"
@@ -237,7 +236,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -283,8 +282,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             無骨な片刃の刃物です。
                             FBXファイル、テクスチャ7枚(内Normal3枚、Metallic1枚)、Unitypackageファイルが入っています
                             ポリゴン数：568 マテリアル：3 VRChat等でお使いください。
@@ -293,8 +292,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
